# AstroBurst

./: .editorconfig  .gitattributes  .gitignore  AstroKit_Technical_Document_v0.0.1.docx  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: flatpak.yml  release.yml
data/: io.github.samuelkriegerbonini_dev.AstroBurst.desktop  io.github.samuelkriegerbonini_dev.AstroBurst.metainfo.xml
docs/code/: astroburst_technical_document.tex
exampleFits/: README.md
flatpak/: FLATPAK.md  com.astroburst.desktop.desktop  com.astroburst.desktop.metainfo.xml  com.astroburst.desktop.yml
scripts/: install-linux.sh  install-macos.sh
src/: App.tsx  advanced-viewer.css  declarations.d.ts  index.css  tauri.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cmd/: analysis.rs  astrometry.rs  background.rs  common.rs  compose.rs  config.rs  cube.rs  deconvolution.rs  drizzle.rs  helpers.rs  image.rs  metadata.rs  mod.rs  output.rs  pipeline.rs  psf.rs  resample.rs  spcc.rs  stacking.rs  stretch.rs  synth.rs  visualization.rs  wavelet.rs
src-tauri/src/cmd/analysis/: mod.rs
src-tauri/src/cmd/compose/: blend.rs  color.rs  crop.rs  mod.rs  rgb.rs
src-tauri/src/cmd/export/: mod.rs
src-tauri/src/cmd/io/: mod.rs
src-tauri/src/cmd/metadata/: mod.rs
src-tauri/src/cmd/processing/: background.rs  curves.rs  mod.rs  stretch.rs
src-tauri/src/cmd/stacking/: combine.rs  drizzle.rs  mod.rs  pipeline.rs
src-tauri/src/cmd/visualization/: mod.rs
src-tauri/src/commands/: analysis.rs  astrometry.rs  config.rs  cube.rs  helpers.rs  image.rs  metadata.rs  mod.rs  stacking.rs  visualization.rs
src-tauri/src/config/: astrokit_config.json
src-tauri/src/core/: mod.rs
src-tauri/src/core/alignment/: affine.rs  downsample.rs  mod.rs  pair.rs  phase_correlation.rs
src-tauri/src/core/analysis/: confidence.rs  deconvolution.rs  fft.rs  mod.rs  star_detection.rs  subframe.rs
src-tauri/src/core/astrometry/: mod.rs  plate_solve.rs  spcc.rs  wcs.rs
src-tauri/src/core/compose/: channel_blend.rs  drizzle_rgb.rs  lrgb.rs  mod.rs  rgb.rs  white_balance.rs
src-tauri/src/core/cube/: eager.rs  lazy.rs
src-tauri/src/core/imaging/: background.rs  boundary.rs  calibration_pipeline.rs  curves.rs  masked_stretch.rs  mod.rs  normalize.rs  psf_estimation.rs  resample.rs  sampling.rs  scnr.rs  star_mask.rs  stats.rs  stf.rs  stretch.rs  wavelet.rs
src-tauri/src/core/metadata/: header_discovery.rs  mod.rs
src-tauri/src/core/stacking/: align.rs  calibration.rs  combine.rs  drizzle.rs  mod.rs
src-tauri/src/core/synth/: mod.rs  noise.rs  pipeline.rs  psf.rs  star_field.rs
src-tauri/src/domain/: calibration.rs  config_manager.rs  cube.rs  drizzle.rs  drizzle_rgb.rs  fft.rs  fits_writer.rs  header_discovery.rs  lazy_cube.rs  mod.rs  normalize.rs  pipeline.rs  plate_solve.rs  psf_estimation.rs  resample.rs  rgb_compose.rs  scnr.rs  stacking.rs  stats.rs  stf.rs  wcs.rs
src-tauri/src/infra/: asdf_bridge.rs  cache.rs  config.rs  ipc.rs  mod.rs  progress.rs
src-tauri/src/infra/asdf/: blocks.rs  converter.rs  mod.rs  parser.rs  tree.rs
src-tauri/src/infra/astrometry/: mod.rs
src-tauri/src/infra/fits/: dispatcher.rs  mod.rs  reader.rs  writer.rs
src-tauri/src/infra/render/: grayscale.rs  mod.rs  rgb.rs  tiles.rs
src-tauri/src/math/: complex.rs  fft.rs  median.rs  mod.rs  normalization.rs  sigma_clip.rs  simd.rs  subpixel.rs  window.rs
src-tauri/src/model/: header.rs  mod.rs
src-tauri/src/shaders/: zncc_align.wgsl
src-tauri/src/types/: compose.rs  config.rs  constants.rs  error.rs  header.rs  image.rs  mod.rs  stacking.rs
src-tauri/src/utils/: constants.rs  dispatcher.rs  ipc.rs  mmap.rs  mod.rs  render.rs  simd.rs  tiles.rs
src/components/: AstroLogo.tsx  (+31 more)
(+174 files in other folders)
