[package]
name = "astroburst"
version = "0.1.0"
edition = "2021"
description = "AstroBurst — High-Performance JWST FITS Processing"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
percent-encoding = "2.3"
ndarray = { version = "0.16", features = ["rayon", "serde"] }
rayon = "1.10"
image = "0.25"

memmap2 = "0.9"
zip = "0.6"
tempfile = "3.8"
base64 = "0.22"
dirs = "5.0"
regex = "1.10"
rustfft = "6.2"
num-complex = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart"], optional = true }
lazy_static = "1.5.0"
tauri-plugin-shell = "2.3.5"
commands = "0.0.5"
[features]
astrometry-net = ["dep:reqwest"]
default = ["astrometry-net"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "astroburst_lib"
crate-type = ["lib"]
