[package]
name = "astroburst"
version = "0.4.8"
edition = "2021"
description = "AstroBurst -- High-Performance JWST FITS Processing"
license = "GPL-3.0-or-later"
authors = ["Samuel Krieger Bonini"]
repository = "https://github.com/samuelkriegerbonini-dev/AstroBurst"

[dependencies]
tauri = { version = "2.10", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-shell = "2.3"
tauri-plugin-opener = "2.3"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"

ndarray = { version = "0.16", features = ["rayon", "serde"] }
rayon = "1.10"
rand = "0.8"
image = "0.25"
rustfft = "6.2"
num-complex = "0.4"

memmap2 = "0.9"
flate2 = "1.0"
zip = "2"
tempfile = "3.8"
dirs = "5.0"
regex = "1.10"

bzip2 = { version = "0.5", optional = true }
lz4_flex = { version = "0.11", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart"], optional = true}
base64 = "0.22.1"
log = "0.4.29"
config = "0.15.22"
urlencoding = "2.1.3"

[features]
default = ["astrometry-net", "asdf-full"]
astrometry-net = ["dep:reqwest"]
vizier = ["reqwest/blocking"]
asdf-full = ["dep:bzip2", "dep:lz4_flex"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[lib]
name = "astroburst_lib"
crate-type = ["lib"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
